# RustDataPro

./: .gitignore  Cargo.toml  JD_12.txt  JD_13.txt  build_instructions.txt  client.json  demo.xlsx  example_client.txt  example_ksf.txt  example_ksf2.txt  fill_template.sh  flake.nix  index.html
DataProClients/6541392500/: TEMPLATEKSF.txt  client_data.txt
DataProClients/7811224253/: TEMPLATEKSF.txt  assessments.txt  client_data.txt  example_ksf.txt
DataProClients/BrokenAssessments/: TEMPLATEKSF.txt  client_data.txt
DataProClients/BrokenAssessmentsAndKsf/: TEMPLATEKSF.txt  assessments.txt  client_data.txt
DataProClients/BrokenClientData/: assessments.txt  client_data.txt
DataProClients/DOAFuture/: client_data.txt
DataProClients/InvalidDOA/: client_data.txt
DataProClients/MissingAssessments/: client_data.txt
DataProClients/MissingSessionRecords/: TEMPLATEKSF.txt  client_data.txt
assets/: manifest.json  sw.js
src/: about_page.rs  app.rs  counter.rs  data_tracking_page.rs  display_controller.rs  example_ksf.txt  ksf.rs  lib.rs  main.rs  pages.rs  prng.rs  random_services.rs  randomness_page.rs  reliability.rs  session_page.rs  timer.rs  timers.rs  timers_page.rs  utils.rs
src/data/: assessment_data.rs  client.rs  client_data.rs  frequency_timeline.rs  ioa_data.rs  ksf.rs  ksf_data.rs  mod.rs  output_data.rs  reli_data.rs  reliability_data.rs  session.rs  session_data.rs  timeline.rs  timer.rs
src/data_tracking/: counter.rs  data_tracking_page.rs  mod.rs  timer.rs
src/ioa/: excel_output.rs  ioa_page.rs  mod.rs  validate_files.rs
src/pages/: about.rs  (+12 more)
(+10 files in other folders)
