[package]
name = "datapro"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.0"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    #"persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version = "0.32", features = ["all_loaders"] }
csv = "1.2.1"
chrono = "0.4.45"
itertools = "0.10.0"

# You only need serde if you want app persistence:
# serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
